# CodeAtlas

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.kiro/steering/: domains.md  (+9 more)
atlas/: README.md
docs/: AI_ASSISTED_EXTRACTION_STRATEGY.md  AST_EXTRACTION_STRATEGY.md  AUTOMATION.md  CANONICAL_EXECUTION_PATH.md  CHANGELOG.md  CODEX_ATLAS_NGK_ENGINE_HANDOFF.md  CODEX_IMPLEMENTATION_PLAN.md  CODEX_ORCHESTRATOR_IMPLEMENTATION_LOG.md  CODE_ATLAS_REVERSE_VERIFICATION.md  CODE_MAP_FOUNDATION.md  FRAMEWORK_ARCHITECTURE_V2.md  GRAPHIFY_PATTERNS_ADOPTED.md  GRAPHIFY_STRATEGY_ADOPTION.md  IMPLEMENTATION_TICKETS_PRE_TRANSFER.md  KIRO_CHANGELOG.md  KIRO_CHANGELOG_2026_06_06_NGK_TRACE.md  KIRO_CHANGELOG_V2_AI_ASSISTED.md  KIRO_CHANGELOG_V2_CONTRACT_TESTING.md  KIRO_CHANGELOG_V2_REACT_STACK_INDEXER.md  KIRO_CHANGELOG_V2_TOOLING.md  KIRO_CONTEXT_USAGE.md  KIRO_FRAMEWORK_IMPLEMENTATION_GUIDE.md  KIRO_ZIP_HANDOFF.md  KNOWLEDGE_CONTEXT_LAYER.md  LAYER_BUILD_CONTRACT.md  LEGACY_AND_EXPERIMENTAL_PATHS.md  MAINTENANCE_STRATEGY.md  MERGE_REQUEST_REVIEW_FRAMEWORK.md  MULTI_REPO_MAPPING_STRATEGY.md  NEXT_STEPS_FOR_KIRO.md  NGK_ECOSYSTEM_HARDENING_PLAN.md  NGK_GENERATED_FRAMEWORK_BUNDLE_MANIFEST.md  NGK_TRACE_VISUAL_FLOW_EXPLORER.md  NO_MCP_LOCAL_MEMORY_DESIGN.md  NO_MCP_STRUCTURAL_MEMORY.md  PRE_TRANSFER_READINESS_CHECKLIST.md  REACT_STACK_INDEXER_TOOL.md  REACT_STACK_MAPPING_GUIDE.md  REACT_UI_STACK_MAPPING.md  REPO_CLEANUP_AUDIT.md  (+13 more)
ngk_framework/: __init__.py  audit.py  base.py  cli.py  commands.py  context.py  contract.py  drift.py  evals.py  impact.py  indexer.py  review.py  store.py
(+230 files in other folders)
